--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9374">  <td>20/10/31 17:31:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:0, instance:com.qa.tests.LoginPageTest@143640d5]">doLoginTest</td> 
-  <td>main@1571967156</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>20/10/31 17:30:49</td>   <td>-11416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.LoginPageTest@143640d5]">&gt;&gt;setuptest</td> 
-<td>&nbsp;</td>  <td>main@1571967156</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>20/10/31 17:31:02</td>   <td>1416</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.LoginPageTest@143640d5]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>20/12/12 18:51:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doLoginTest()[pri:0, instance:com.qa.tests.PatientCheckInTest@6295d394]">doLoginTest</td> 
+  <td>main@260840925</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>20/12/12 18:51:11</td>   <td>3507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PatientCheckInTest@6295d394]">doNavigateToHISHomeTest</td> 
+  <td>main@260840925</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>20/12/12 18:51:19</td>   <td>11414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToPatientCheckInTest()[pri:3, instance:com.qa.tests.PatientCheckInTest@6295d394]">doNavigateToPatientCheckInTest</td> 
+  <td>main@260840925</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>20/12/12 18:51:08</td>   <td>371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PatientCheckInTest@6295d394]">doNavigateToSelectHospitalLocationTest</td> 
+  <td>main@260840925</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>20/12/12 18:50:51</td>   <td>-15830</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PatientCheckInTest@6295d394]">&gt;&gt;setuptest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@260840925</td>   <td></td> </tr>
+<tr bgcolor="ea6197">  <td>20/12/12 18:51:23</td>   <td>15757</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PatientCheckInTest@6295d394]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@260840925</td>   <td></td> </tr>
 </table>
