--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -118,6 +118,16 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.PatientCheckInTest" hash-for-method="doNavigateToSelectHospitalLocationTest">doNavigateToSelectHospitalLocationTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.PatientCheckInTest" hash-for-method="doPatientCheckINTest">doPatientCheckINTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.PatientCheckInTest" hash-for-method="verifyPatientCheckInPageTitleTest">verifyPatientCheckInPageTitleTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -164,6 +174,20 @@
                   <a name="doNavigateToSelectHospitalLocationTest">
                   </a> <!-- doNavigateToSelectHospitalLocationTest -->
                   <span class="method-name">doNavigateToSelectHospitalLocationTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doPatientCheckINTest">
+                  </a> <!-- doPatientCheckINTest -->
+                  <span class="method-name">doPatientCheckINTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyPatientCheckInPageTitleTest">
+                  </a> <!-- verifyPatientCheckInPageTitleTest -->
+                  <span class="method-name">verifyPatientCheckInPageTitleTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -223,28 +247,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'doNavigateToHISHomeTest')
+data.setCell(0, 1, 'doPatientCheckINTest')
 data.setCell(0, 2, 'com.qa.tests.PatientCheckInTest')
-data.setCell(0, 3, 7836);
+data.setCell(0, 3, 31646);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doNavigateToSelectHospitalLocationTest')
+data.setCell(1, 1, 'doNavigateToHISHomeTest')
 data.setCell(1, 2, 'com.qa.tests.PatientCheckInTest')
-data.setCell(1, 3, 2796);
+data.setCell(1, 3, 4623);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLoginTest')
+data.setCell(2, 1, 'doNavigateToSelectHospitalLocationTest')
 data.setCell(2, 2, 'com.qa.tests.PatientCheckInTest')
-data.setCell(2, 3, 1546);
+data.setCell(2, 3, 3692);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'doNavigateToPatientCheckInTest')
 data.setCell(3, 2, 'com.qa.tests.PatientCheckInTest')
-data.setCell(3, 3, 1293);
+data.setCell(3, 3, 1618);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'doLoginTest')
+data.setCell(4, 2, 'com.qa.tests.PatientCheckInTest')
+data.setCell(4, 3, 193);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifyPatientCheckInPageTitleTest')
+data.setCell(5, 2, 'com.qa.tests.PatientCheckInTest')
+data.setCell(5, 3, 17);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 41 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -277,23 +309,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">doLoginTest</span>
-                <span class="method-start">11960 ms</span>
+                <span class="method-start">12630 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToSelectHospitalLocationTest</span>
-                <span class="method-start">13508 ms</span>
+                <span class="method-start">12825 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToHISHomeTest</span>
-                <span class="method-start">16305 ms</span>
+                <span class="method-start">16518 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToPatientCheckInTest</span>
-                <span class="method-start">24142 ms</span>
+                <span class="method-start">21142 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyPatientCheckInPageTitleTest</span>
+                <span class="method-start">22761 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">doPatientCheckINTest</span>
+                <span class="method-start">22779 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">25435 ms</span>
+                <span class="method-start">54425 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
