--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -26,6 +26,14 @@
 <td>doNavigateToHISHomeTest</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>doPatientCheckINTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPatientCheckInPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
