--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee998b">  <td>20/12/12 18:56:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">&gt;&gt;setuptest</td> 
+<tr bgcolor="ee998b">  <td>20/12/13 20:20:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">&gt;&gt;setuptest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>20/12/12 18:56:55</td>   <td>11956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doLoginTest()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">doLoginTest</td> 
+<tr bgcolor="baa398">  <td>20/12/13 20:20:29</td>   <td>12626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doLoginTest()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">doLoginTest</td> 
   <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>20/12/12 18:56:57</td>   <td>13504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
+<tr bgcolor="baa398">  <td>20/12/13 20:20:30</td>   <td>12821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
   <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>20/12/12 18:57:00</td>   <td>16301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToHISHomeTest</td> 
+<tr bgcolor="baa398">  <td>20/12/13 20:20:33</td>   <td>16514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToHISHomeTest</td> 
   <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>20/12/12 18:57:08</td>   <td>24138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToPatientCheckInTest()[pri:3, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToPatientCheckInTest</td> 
+<tr bgcolor="baa398">  <td>20/12/13 20:20:38</td>   <td>21138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doNavigateToPatientCheckInTest()[pri:3, instance:com.qa.tests.PatientCheckInTest@475e586c]">doNavigateToPatientCheckInTest</td> 
   <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>20/12/12 18:57:09</td>   <td>25432</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">&lt;&lt;teardown</td> 
+<tr bgcolor="baa398">  <td>20/12/13 20:20:40</td>   <td>22757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.verifyPatientCheckInPageTitleTest()[pri:4, instance:com.qa.tests.PatientCheckInTest@475e586c]">verifyPatientCheckInPageTitleTest</td> 
+  <td>main@1891502635</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>20/12/13 20:20:40</td>   <td>22775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientCheckInTest.doPatientCheckINTest()[pri:5, instance:com.qa.tests.PatientCheckInTest@475e586c]">doPatientCheckINTest</td> 
+  <td>main@1891502635</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>20/12/13 20:21:11</td>   <td>54422</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PatientCheckInTest@475e586c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
 </table>
