--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:40:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.doLoginTest()[pri:0, instance:com.qa.tests.PatientAdmissionTest@475e586c]">doLoginTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:40:49</td>   <td>4401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PatientAdmissionTest@475e586c]">doNavigateToHISHomeTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:40:50</td>   <td>5634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.doNavigateToPatientAdmissionTest()[pri:3, instance:com.qa.tests.PatientAdmissionTest@475e586c]">doNavigateToPatientAdmissionTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:40:47</td>   <td>1937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PatientAdmissionTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:41:20</td>   <td>35066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.doPatientAdmissionTest()[pri:5, instance:com.qa.tests.PatientAdmissionTest@475e586c]">doPatientAdmissionTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/01/28 18:40:39</td>   <td>-5326</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PatientAdmissionTest@475e586c]">&gt;&gt;setuptest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/01/28 18:42:00</td>   <td>75353</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PatientAdmissionTest@475e586c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/01/28 18:41:20</td>   <td>35046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientAdmissionTest.verifyPatientAdmissionPageTitleTest()[pri:4, instance:com.qa.tests.PatientAdmissionTest@475e586c]">verifyPatientAdmissionPageTitleTest</td> 
-  <td>main@1014166943</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:30:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doCasesheetprecripstionTest()[pri:6, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doCasesheetprecripstionTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowPATest()[pri:9, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowPATest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowResultEntryTest()[pri:11, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowResultEntryTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTest()[pri:8, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistIPFlowTestPerfTest()[pri:10, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistIPFlowTestPerfTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowDispatchTest()[pri:13, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowDispatchTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:32:19</td>   <td>108053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doImagingWorklistOPFlowResultverifyTest()[pri:12, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doImagingWorklistOPFlowResultverifyTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:24:31</td>   <td>-359217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doLoginTest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doLoginTest</td> 
+  <td>TestNG-test=Test1-1@998070337</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:30:29</td>   <td>-1367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToDoctorWorklistTest()[pri:5, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToDoctorWorklistTest</td> 
+  <td>TestNG-test=Test1-4@1809072344</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:30:28</td>   <td>-2268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToHISHomeTest</td> 
+  <td>TestNG-test=Test1-3@626474143</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:31:16</td>   <td>45286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToImagingWorklistLinkTest()[pri:7, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToImagingWorklistLinkTest</td> 
+  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/02/01 15:24:32</td>   <td>-358457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImagingWorkListIPPageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">doNavigateToSelectHospitalLocationTest</td> 
+  <td>TestNG-test=Test1-2@1530682626</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>21/02/01 15:24:27</td>   <td>-363469</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&gt;&gt;setuptest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test1-1@998070337</td>   <td></td> </tr>
+<tr bgcolor="ee998b">  <td>21/02/01 15:32:19</td>   <td>108055</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.ImagingWorkListIPPageTest@657c8ad9]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test1-5@956072127</td>   <td></td> </tr>
 </table>
