--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">48,614</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">30,285</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.qa.tests.PhysicalStockEntryTest</td><td><a href="#m0">doLoginTest</a></td><td rowspan="1">1612774371082</td><td rowspan="1">1239</td></tr><tr class="passedeven"><td><a href="#m1">doNavigateToHISHomeTest</a></td><td rowspan="1">1612774397898</td><td rowspan="1">1498</td></tr><tr class="passedeven"><td><a href="#m2">doNavigateToPatientCheckInTest</a></td><td rowspan="1">1612774399398</td><td rowspan="1">1867</td></tr><tr class="passedeven"><td><a href="#m3">doNavigateToSelectHospitalLocationTest</a></td><td rowspan="1">1612774372323</td><td rowspan="1">25574</td></tr><tr class="passedeven"><td><a href="#m4">doPhysicalStockEntryTest</a></td><td rowspan="1">1612774401266</td><td rowspan="1">12938</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.qa.tests.LossBreakageTest</td><td><a href="#m0">doLoginTest</a></td><td rowspan="1">1612780768035</td><td rowspan="1">5613</td></tr><tr class="passedeven"><td><a href="#m1">doLossAndBreakageTest</a></td><td rowspan="1">1612780783568</td><td rowspan="1">9441</td></tr><tr class="passedeven"><td><a href="#m2">doNavigateLossBreakageLinkTest</a></td><td rowspan="1">1612780782444</td><td rowspan="1">1120</td></tr><tr class="passedeven"><td><a href="#m3">doNavigateToHISHomeTest</a></td><td rowspan="1">1612780779427</td><td rowspan="1">3015</td></tr><tr class="passedeven"><td><a href="#m4">doNavigateToSelectHospitalLocationTest</a></td><td rowspan="1">1612780773652</td><td rowspan="1">5772</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.qa.tests.PhysicalStockEntryTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.qa.tests.PhysicalStockEntryTest#doNavigateToHISHomeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.qa.tests.PhysicalStockEntryTest#doNavigateToPatientCheckInTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.qa.tests.PhysicalStockEntryTest#doNavigateToSelectHospitalLocationTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.qa.tests.PhysicalStockEntryTest#doPhysicalStockEntryTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test1</h2><h3 id="m0">com.qa.tests.LossBreakageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.qa.tests.LossBreakageTest#doLossAndBreakageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.qa.tests.LossBreakageTest#doNavigateLossBreakageLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.qa.tests.LossBreakageTest#doNavigateToHISHomeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.qa.tests.LossBreakageTest#doNavigateToSelectHospitalLocationTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
