--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee998b">  <td>21/02/08 13:43:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">&gt;&gt;setuptest</td> 
+<tr bgcolor="ee998b">  <td>21/02/08 16:09:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setuptest()[pri:0, instance:com.qa.tests.LossBreakageTest@475e586c]">&gt;&gt;setuptest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/08 13:44:06</td>   <td>8280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doLoginTest()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">doLoginTest</td> 
+<tr bgcolor="baa398">  <td>21/02/08 16:09:28</td>   <td>5294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LossBreakageTest.doLoginTest()[pri:0, instance:com.qa.tests.LossBreakageTest@475e586c]">doLoginTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/08 13:44:08</td>   <td>10739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
+<tr bgcolor="baa398">  <td>21/02/08 16:09:33</td>   <td>10911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LossBreakageTest.doNavigateToSelectHospitalLocationTest()[pri:1, instance:com.qa.tests.LossBreakageTest@475e586c]">doNavigateToSelectHospitalLocationTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/08 13:44:12</td>   <td>14576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">doNavigateToHISHomeTest</td> 
+<tr bgcolor="baa398">  <td>21/02/08 16:09:39</td>   <td>16686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LossBreakageTest.doNavigateToHISHomeTest()[pri:2, instance:com.qa.tests.LossBreakageTest@475e586c]">doNavigateToHISHomeTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/08 13:44:13</td>   <td>15966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doNavigateToPatientCheckInTest()[pri:3, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">doNavigateToPatientCheckInTest</td> 
+<tr bgcolor="baa398">  <td>21/02/08 16:09:42</td>   <td>19703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LossBreakageTest.doNavigateLossBreakageLinkTest()[pri:3, instance:com.qa.tests.LossBreakageTest@475e586c]">doNavigateLossBreakageLinkTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/02/08 13:44:15</td>   <td>17297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhysicalStockEntryTest.doPhysicalStockEntryTest()[pri:4, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">doPhysicalStockEntryTest</td> 
+<tr bgcolor="baa398">  <td>21/02/08 16:09:43</td>   <td>20827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LossBreakageTest.doLossAndBreakageTest()[pri:4, instance:com.qa.tests.LossBreakageTest@475e586c]">doLossAndBreakageTest</td> 
   <td>main@1014166943</td>   <td></td> </tr>
-<tr bgcolor="ee998b">  <td>21/02/08 13:44:19</td>   <td>21515</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.PhysicalStockEntryTest@475e586c]">&lt;&lt;teardown</td> 
+<tr bgcolor="ee998b">  <td>21/02/08 16:09:53</td>   <td>30270</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.tests.LossBreakageTest@475e586c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1014166943</td>   <td></td> </tr>
 </table>
